experimentData/JavaFuzzer/CFR-detailedExperimentData/errorSamples/recompilationFailures/98/log-1-98.log

Test.java:250: error: illegal start of expression
                ** case 65:
                ^
Test.java:250: error: illegal start of expression
                ** case 65:
                 ^
Test.java:250: error: illegal start of expression
                ** case 65:
                   ^
Test.java:254: error: illegal start of statement
                case 66: {
                ^
4 errors

Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

